[gd_scene load_steps=8 format=3 uid="uid://bw88wjxtv4ru8"]

[ext_resource type="Script" path="res://Scenes/Prefabs/UI/AchievementScene.gd" id="1_j568m"]
[ext_resource type="FontFile" uid="uid://ccgpsjqwwow8o" path="res://Fonts/Bubblegum.ttf" id="1_paljv"]
[ext_resource type="Texture2D" uid="uid://dl8dw08og2gr8" path="res://Images/Backgrounds/Placeholder_backgorund_minigames.jpg" id="2_ht7o6"]
[ext_resource type="Texture2D" uid="uid://2rpmid1gnwur" path="res://Images/UI/Buttons/RoundButton.png" id="3_kbp3x"]
[ext_resource type="Texture2D" uid="uid://dj5an2o6yuccm" path="res://Images/UI/Buttons/Exit.png" id="4_0uldr"]
[ext_resource type="Texture2D" uid="uid://8td7rg4p53o3" path="res://Images/UI/Achievmentes/Playing_minigames.png" id="6_nu02i"]
[ext_resource type="Texture2D" uid="uid://dw80yvjvyjm2e" path="res://Images/UI/Achievmentes/Ramka.png" id="7_0eyop"]

[node name="AchievementScene" type="Node2D"]
process_mode = 3
z_index = 4096
script = ExtResource("1_j568m")

[node name="BackgroundUI" type="Sprite2D" parent="."]
modulate = Color(0.501961, 0.678431, 0.588235, 1)
position = Vector2(584, 319)
texture = ExtResource("2_ht7o6")

[node name="AchievementText" type="Label" parent="."]
offset_left = 218.0
offset_top = 99.0
offset_right = 952.0
offset_bottom = 231.0
theme_override_fonts/font = ExtResource("1_paljv")
theme_override_font_sizes/font_size = 50
text = "Odblokowales nowe osiagniecie!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="PrizeText" type="Label" parent="."]
offset_left = 504.0
offset_top = 428.0
offset_right = 654.0
offset_bottom = 467.0
theme_override_fonts/font = ExtResource("1_paljv")
theme_override_font_sizes/font_size = 30
text = "Nagroda:"

[node name="MoneyText" type="Label" parent="."]
offset_left = 499.0
offset_top = 459.0
offset_right = 649.0
offset_bottom = 498.0
theme_override_fonts/font = ExtResource("1_paljv")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="Node2D" parent="."]
position = Vector2(220, -306)
scale = Vector2(0.7, 0.7)
metadata/_edit_group_ = true

[node name="Button" type="TextureButton" parent="Exit"]
offset_left = -2.0
offset_top = 546.0
offset_right = 104.0
offset_bottom = 646.0
texture_normal = ExtResource("3_kbp3x")
texture_pressed = ExtResource("3_kbp3x")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="Sprite2D" parent="Exit"]
position = Vector2(51, 595)
scale = Vector2(0.124325, 0.124325)
texture = ExtResource("4_0uldr")

[node name="AchievementImage" type="Node2D" parent="."]
position = Vector2(539, 351)

[node name="AchievementImage" type="Sprite2D" parent="AchievementImage"]
position = Vector2(37.3333, -37)
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_nu02i")

[node name="Frame" type="Sprite2D" parent="AchievementImage"]
position = Vector2(37.3333, -36.6667)
scale = Vector2(0.7, 0.7)
texture = ExtResource("7_0eyop")

[node name="Label" type="Label" parent="AchievementImage"]
offset_left = -20.0
offset_top = -83.0
offset_right = 41.0
offset_bottom = -46.0
theme_override_fonts/font = ExtResource("1_paljv")
theme_override_font_sizes/font_size = 34
text = "PKT"
horizontal_alignment = 1

[connection signal="mouse_entered" from="Exit/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Exit/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Exit/Button" to="." method="_on_button_pressed"]
